- Fixed message footer height - added truncate function to attachment detail

--- a/client/sass/components/_message.scss
+++ b/client/sass/components/_message.scss
@@ -118,7 +118,7 @@
       text-align: left;
       padding-bottom: 10px;
       padding-top: 20px;
-      height: 70px;
+      height: 73px;
 
       > a {
         display: inline-block;
